# OneContext

./: .gitignore  README.md
npm/: package.json  postinstall.js  run.js
python/: pyproject.toml
python/realign/: __init__.py  agent_names.py  auth.py  cli.py  codex_home.py  commit_pipeline.py  config.py  dashboard_tracking.py  file_lock.py  hooks.py  install_state.py  llm_client.py  logging_config.py  user_directory.py  watcher_core.py  watcher_daemon.py  worker_core.py  worker_daemon.py
python/realign/adapters/: codex.py
python/realign/claude_hooks/: stop_hook.py
python/realign/codex_hooks/: __init__.py  notify_hook.py  notify_hook_installer.py
python/realign/commands/: add.py  agent.py  auth.py  context.py  doctor.py  export_shares.py  import_shares.py  init.py  search.py  sync_agent.py  upgrade.py  watcher.py  worker.py
python/realign/dashboard/: app.py  branding.py  diagnostics.py  local_api.py  singleton.py  state.py  system_prompts.py  tmux_manager.py
python/realign/dashboard/backends/: iterm2.py  kitty.py
python/realign/dashboard/screens/: __init__.py  agent_detail.py  archive_confirm.py  close_terminal_confirm.py  create_agent.py  create_agent_info.py  create_event.py  event_detail.py  import_history.py  import_history_prompt.py  logout_confirm.py  session_detail.py  share_result.py  share_warning.py
python/realign/dashboard/styles/: dashboard.tcss
python/realign/dashboard/widgets/: __init__.py  agents_panel.py  config_panel.py  copyable_text_area.py  header.py  right_status_bar.py  sessions_table.py  watcher_panel.py
python/realign/db/: __init__.py  base.py  schema.py  sqlite_db.py
python/realign/events/: agent_summarizer.py  session_summarizer.py
